[tool.poetry]
name = "aiopykube"
version = "0.1.0"
description = "asyncio Pykube"
authors = ["Thibaut Le Page <thilp@thilp.net>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
