[tool.poetry]
name = "aiopykube"
version = "0.1.0"
description = "asyncio Pykube"
authors = ["Thibaut Le Page <thilp@thilp.net>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
asyncio = "^3.4"
aiohttp = "^3.5"
pyyaml = "^5.1"
tenacity = "^5.0"
jsonpatch = "^1.23"
dataclasses = "^0.6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.0"
pytest-asyncio = "^0.10.0"
flake8 = "^3.7"
pytest-cov = "^2.7"
ipython = "^7.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
